# vhal_emulator

./: .gitignore  Cargo.lock.license  Cargo.toml  Makefile  README.md  build.rs  rusfmt.toml
.github/workflows/: reuse.yml  rust.yml
.reuse/: dep5
src/: lib.rs  vhal_consts_2_0.rs
src/codegen/: gen_vhal_const.py  hidl_parser.py  requirements.txt  vhal_consts_2_0.rs.mako
src/codegen/data/: types.hal.license
src/protos/: VehicleHalProto.proto.license
